2002-09-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* mkbind.c: remove definition of global defined in functions.c.

2002-09-15  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* basename.c (basename): remove unused static variable.

	* mkfntab-c.m4: don't output empty line at beginning of functions
	array.

	* mkbind.c (initnames): fix line number counting.

	* sftp.c (_sftp_put_uint32, _sftp_put_uint64, _sftp_writev,
	sftp_read, sftp_xfer_read), tty.c (tty_init), url.c (url_decode):
	fix OSF/1 c89 warnings.

2002-09-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (_ftp_update_transfer): print estimated remaining time to
	completion.

2002-03-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_gets): copy new portion to correct position in line
	(not past the end).

2002-02-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_select.c (fn_enter_get, fn_enter_view, fn_enter, fn_reload,
	fn_get, fn_view, fn_pipe): if current directory is empty and no
	file name is specified, do nothing (instead of using nonexistent
	current entry.)

2002-01-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sftp.c (_sftp_log_packet): enlarge buf, use strcpy instead of
	strcat.

2001-12-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sftp.c (_sftp_log_packet): use sprintf-like format strings.
	(_sftp_log_pflags) new function.
	
	* mkfntab-c.m4, mkfntab-h.m4, mkfntexi.m4, fntable.fn,
	mkoptab-c.m4, mkoptab-h.m4, mkoptexi.m4, options.op: include rcs
	ids in included files.
	
	* status.c (opt_set_status): remove unused function.

	* sftp.c (_sftp_read_dir): free strings if skipping entry.

	* mkbind.c (disp_status): honour DISP_STDERR.

	* sftp.c (sftp_xfer_read, sftp_xfer_stop): fix typo.
	
	* sftp.c: remove unused variables.
	* ftp.c (ftp_cat, rftp_xfer_start): remove unused variables.

	* main.c: ifdef USE_SFTP sftp options handling and usage.

	* ftp.c (rftp_xfer_read): select fileno(f) for reading.

2001-12-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>
